--- a/common/app/assets/stylesheets/module/nav/_localnav.scss
+++ b/common/app/assets/stylesheets/module/nav/_localnav.scss
@@ -21,7 +21,7 @@
             display: block;
         }
     }
-    .article__headline {
+    .article__head {
         border-top: 0;
     }
 }
